--- a/src/optim8.scss
+++ b/src/optim8.scss
@@ -1,5 +1,15 @@
-body {
-  a {
-    display: block;
-  }
-}
+//TODO: add button
+
+//TODO: add checkbox
+
+//TODO: add Radio buttons
+
+//TODO: add color scheme
+@import './modules/variables';
+@import './modules/colors';
+@import './modules/mixins';
+
+@import './modules/normalize';
+@import './modules/reset';
+
+@import './components/layout-grid';
